TINY-9176: Fixing issue with split button border-radius caused by the removal of overflow hidden

--- a/modules/oxide/src/less/theme/components/toolbar-button/toolbar-split-button.less
+++ b/modules/oxide/src/less/theme/components/toolbar-button/toolbar-split-button.less
@@ -8,7 +8,6 @@
 .tox {
   .tox-split-button {
     border: 0;
-    border-radius: @toolbar-button-border-radius;
     box-sizing: border-box;
     display: flex;
     margin: (@toolbar-button-spacing-y + 1px) @toolbar-button-spacing-x @toolbar-button-spacing-y 0;
@@ -32,6 +31,18 @@
 
   .tox-split-button > * {
     border-radius: 0;
+
+    // Cannot use first and last child selectors because of a hidden element
+    // used for screen reader accessibility
+    &:nth-child(1) {
+      border-bottom-left-radius: @toolbar-button-border-radius;
+      border-top-left-radius: @toolbar-button-border-radius;
+    }
+
+    &:nth-child(2) {
+      border-bottom-right-radius: @toolbar-button-border-radius;
+      border-top-right-radius: @toolbar-button-border-radius;
+    }
   }
 
   .tox-split-button__chevron {
